tests/expectations/compiler/constants/global_shadowing_constant_fail.out
Error [EAST0372017]: The name `HELLO` is defined multiple times.
    --> compiler-test:3:7
     |
   2 |   const HELLO: u8 = 0u8;
     |         ^^^^^ previous definition of `HELLO` here
   3 |   const HELLO: u8 = 1u8;
     |         ^^^^^ `HELLO` redefined here
